Issue #3: Added macOS specific distribution.